--- a/src/main/resources/edu/wpi/teamname/views/ExampleFXML.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/ExampleFXML.fxml
@@ -40,7 +40,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.Controllers.ExampleController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.controllers.ExampleController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
